@@ -1,0 +1,19 @@
+// file      : CCF/IDL2/SyntaxTree/ElementsCtor.cpp
+// author    : Boris Kolpackov <boris@dre.vanderbilt.edu>
+// cvs-id    : $Id$
+
+namespace CCF
+{
+  namespace IDL2
+  {
+    namespace SyntaxTree
+    {
+      struct Declaration
+      {
+        Declaration ();
+      };
+      
+      Declaration::Declaration () {}
+    }
+  }
+}
